Revert root element height to 100% instead of auto to prevent collapsing pages

--- a/src/components/styles/Marketing.css
+++ b/src/components/styles/Marketing.css
@@ -1,7 +1,3 @@
-#root {
-	height: auto;
-}
-
 .marketing-wrapper {
 	display: flex;
 	flex-direction: column;
